refactor: remove all branding features across stack
